<resources>
    <string name="app_name">Student Detail</string>
    <string name="exam">Exam</string>
    <string name="homework">Homework</string>
    <string name="quiz">Quiz</string>
    <string name="tabs">Tabs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="student">student</string>
    <string name="student_name">Student Name</string>
    <string name="student_id">Student Id</string>
</resources>